made left-center-column 34% width to stop the rows from jumping when AC changes to C

--- a/client/src/components/Layout/style.css
+++ b/client/src/components/Layout/style.css
@@ -76,6 +76,9 @@ tr.left-columns {
     margin: auto;
 }
 
+tr.left-center-column{
+    width: 34%;
+}
 .left-center-column {
     display: flex;
     flex-direction: column;
